# FasterRCNN-Encapsulation-Cplusplus

faster_cxx_lib_ev2641/: CMakeLists.txt  README.md  main.cpp
faster_cxx_lib_ev2641/lib/: CMakeLists.txt  faster_rcnn.cpp  faster_rcnn.hpp
